Release 1.5

#9 Chatty merging of config
#30 Add type generic parameter to TreeConstraint
#31 Customizable request chain
#32 Support for default per-entity constraints
#32 EncoderService: Do not include related_id property by default

Release 1.4 2014-08-22

#25 forSelectRelated/constraints causes unqualified fetch ; 
#26 Refactor delete operation to DeleteBuilder with "delete by id" and "delete by parent" options.
#27 ID that is not a PK can't be used in idempotent requests
	Refactor 'forSelectRelated' to be setup inside SelectBuilder 

Release 1.3 2014-08-20

#7 Allow TreeConstraints to be applied to insert/update requests 
#17 Support "group" as an object
#18 CreateOrUpdateBuilder
#19 Backend support for batch updates of a single entity
#20 IEncoderService to return Encoder instead of DataResponse
#21 SelectBuilder.withEntity - rename to SelectBuilder.canRead.
#22 SenchaAdapter with Incoming id filter
#23 Refactor EntityConfig and friends into 'constraints'
#24 LinkRestAdapter - a generic LR extension mechanism

Release 1.2 2014-08-01

#8 EntityConfig API improvements 
#10 Support for char PK
#11 Refactoring: rename NoRolesEntityAuthorizationEncoderFilter to EntityEncoderFilter
#12 Add 'SelectBuilder.selectOne' method
#13 'filter' processor improvements
#14 ILinkRestService API for managing relationship operations
#15 IMetadataService must throw LinkRestException on bad entities
#16 DataResponseConfig should be attached to SelectBuilder

Release 1.1

#1 Intercept Cayenne ValidationException
#3 DataResponseConfig - a server-side request template
#4 Responses for inserts should return '201 Created' instead of 200
#5 Rename ClientEntity to Entity, ClientProperty to EntityProperty
#6 Entity: convert setters to builder methods similar to EntityConfig